--- a/home.css
+++ b/home.css
@@ -1,5 +1,6 @@
 body {
   margin: 0px;
+  font-family: Gotham5r, GothamMedium, Helvetica, Arial, sans-serif;
 }
 /* banner */
 #banner {
@@ -11,7 +12,7 @@ body {
   margin: auto;
   display: flex;
   justify-content: space-between;
-  padding: 8px;
+  padding: 10px;
   font-family: "Gotham 7r", Helvetica, Arial, sans-serif;
 }
 .banner_link {
@@ -29,11 +30,19 @@ span {
 
 /* persistent top bar */
 #fixed_navbar {
-  position: relative;
   top: 0px;
-  z-index: 999;
   height: 75px;
   border: 1px solid gray;
+  width: 100%;
+  background-color: white;
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+.sticky + .content {
+  padding-top: 70px;
 }
 /* left part of persistent top bar */
 #navbar_left {
@@ -66,29 +75,185 @@ fieldset {
 #search:focus {
   background-color: white;
 }
-/* right part of persistent top bar */
+/* right part of persistent top bar or icons */
 #navbar_right {
   display: flex;
   float: right;
-  width: 22%;
-  border: 1px solid blue;
-  justify-content: space-between;
+  width: 20%;
+  flex-direction: row-reverse;
 }
 #account {
   height: 72px;
-  width: 25%;
-  border: 1px solid black;
+  width: 30%;
+  text-align: center;
+  /* position: relative; */
+}
+#account:hover {
+  cursor: pointer;
 }
 #cart {
   height: 72px;
-  width: 25%;
-  border: 1px solid black;
+  width: 30%;
 }
 #check_out {
   height: 72px;
-  width: 25%;
-  border: 1px solid black;
+  width: 30%;
 }
 .nav_right:hover {
   background-color: #eeeeee;
+}
+#drp_div {
+  /* position: absolute; */
+  width: 200px;
+  height: 200px;
+  border: 1px solid black;
+  /* z-index: 1000; */
+}
+#check_out {
+  text-align: center;
+}
+#cart {
+  text-align: center;
+}
+#cart_icon {
+  text-decoration: none;
+  color: black;
+  font-size: 32px;
+}
+.link {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+.inner_div {
+  margin-top: 10px;
+}
+/* department */
+#department {
+  border-bottom: 1px solid gray;
+  width: 100%;
+  height: 40px;
+}
+#dept_left {
+  display: flex;
+  float: left;
+  width: 30%;
+  height: 40px;
+  justify-content: space-around;
+}
+#menu {
+  margin-top: 15px;
+  margin-right: 10px;
+}
+.menu_bar {
+  width: 20px;
+  height: 2px;
+  background-color: black;
+  margin: 10%;
+  border-radius: 5px;
+}
+#shop button {
+  padding: 10px;
+}
+#shop {
+  display: flex;
+}
+.shop_title {
+  margin-top: 11px;
+  font-weight: bold;
+  text-decoration: none;
+  color: black;
+}
+#line {
+  width: 1px;
+  background-color: gray;
+  height: 20px;
+  margin: auto 0px;
+}
+#store {
+  display: flex;
+  margin-top: 11px;
+}
+#store a:nth-child(1) {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  margin-right: 10px;
+  margin-top: -4px;
+}
+#store a:nth-child(2) {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+/* department right */
+#dept_right {
+  display: flex;
+  float: right;
+  width: 18%;
+  justify-content: space-evenly;
+  margin-top: 9px;
+  margin-right: 25px;
+}
+#dept_right a {
+  text-decoration: none;
+  color: black;
+  font-weight: 700;
+}
+#coupon > a:nth-child(2) {
+  margin-left: 8px;
+}
+/* Explore the gift shop section  */
+#heart {
+  width: 95%;
+  margin: auto;
+  height: 400px;
+  margin-top: 20px;
+  border: 1px solid black;
+}
+#heart img {
+  width: 100%;
+}
+
+/* category items */
+#category {
+  border: 1px solid black;
+  margin-top: 80px;
+  height: 500px;
+}
+#category > h1 {
+  text-align: center;
+  font-family: Gotham5r, GothamMedium, Helvetica, Arial, sans-serif;
+  font-size: 50px;
+  font-weight: 700;
+}
+#items {
+  display: flex;
+  width: 92%;
+  margin: auto;
+  height: 220px;
+  /* border: 1px solid blue; */
+  justify-content: space-around;
+  text-align: center;
+}
+#sephora {
+  width: 170px;
+  height: 220px;
+}
+#items a {
+  text-decoration: none;
+  color: black;
+}
+#items p {
+  font-family: Gotham5r, GothamMedium, Helvetica, Arial, sans-serif;
+  font-size: 26px;
+  margin: 0px;
+  text-align: center;
+  margin-top: 5px;
+}
+/* footer */
+footer {
+  width: 100%;
+  background-color: #f0f0f0;
+  height: 700px;
 }
