--- a/home.css
+++ b/home.css
@@ -251,9 +251,157 @@ fieldset {
   text-align: center;
   margin-top: 5px;
 }
+/* clearance */
+#clearance {
+  width: 92%;
+  margin: 10% 10% 5% 5%;
+  border: 1px solid black;
+  background-image: url("https://media.kohlsimg.com/is/content/kohls/hp2-d-20210902-clearance-bkg");
+  height: 600px;
+  background-repeat: no-repeat;
+}
+#absolute_div {
+  width: 60%;
+  height: 300px;
+  background-color: red;
+  margin-top: 180px;
+  margin-left: -60px;
+}
+#absolute_div img {
+  width: 100%;
+  height: 100%;
+}
+/* get_inspired */
+#get_inspired {
+  width: 95%;
+  margin: auto;
+  margin-bottom: 60px;
+  margin-top: 20px;
+  border: 1px solid black;
+}
+#get_inspired img {
+  width: 100%;
+}
+/* community */
+#community {
+  width: 95%;
+  margin: auto;
+  border: 1px solid black;
+}
+#community img {
+  width: 100%;
+}
+/* disclaimer */
+#disclaimer {
+  width: 90%;
+  margin: 6% auto 15%;
+  text-align: center;
+  font-size: 13px;
+  border: 1px solid black;
+}
 /* footer */
 footer {
   width: 100%;
   background-color: #f0f0f0;
-  height: 700px;
+  height: 1000px;
+}
+#connect {
+  width: 60%;
+  height: 120px;
+  border-bottom: 1px solid gray;
+  margin: auto;
+  margin-top: 0px;
+  display: flex;
+}
+#connect p {
+  margin: 0px;
+  margin-top: 7px;
+}
+#social {
+  width: 45%;
+  display: flex;
+  justify-content: space-around;
+  float: left;
+  padding-top: 35px;
+}
+#social p {
+  font-weight: 700;
+}
+#fb:hover {
+  fill: gray;
+  transition: -webkit-transform 150ms ease-in-out;
+}
+#middle {
+  width: 1px;
+  background-color: gray;
+  height: 80px;
+  margin: auto 0px;
+  margin-left: 20px;
+}
+#app {
+  width: 49%;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 30px;
+}
+#app p {
+  margin-top: 35px;
+  font-weight: 700;
+}
+#app_info p {
+  margin-top: 20px;
+  font-weight: normal;
+}
+#code {
+  width: 100px;
+  height: 120px;
+}
+#code img {
+  width: 100%;
+  height: 100%;
+}
+#learn {
+  background-color: black;
+  color: white;
+  width: 140px;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 15px;
+  margin-top: 8px;
+}
+#learn:hover {
+  font-weight: 700;
+}
+/* footer --details */
+#details {
+  width: 60%;
+  margin: auto;
+  height: 400px;
+  border: 1px solid black;
+  margin-top: 40px;
+  display: flex;
+  justify-content: space-around;
+}
+#details div {
+  width: 18%;
+  height: 400px;
+  border: 1px solid blue;
+  text-align: left;
+}
+/* footer --info */
+#info {
+  width: 65%;
+  margin: auto;
+  margin-top: 40px;
+  text-align: center;
+  font-size: 13px;
+  color: black;
+}
+#info a {
+  color: black;
+  font-weight: 800;
+  font-size: 11px;
+}
+#info a:hover {
+  color: #696969;
 }
