--- a/home.css
+++ b/home.css
@@ -1,6 +1,7 @@
 body {
   margin: 0px;
   font-family: Gotham5r, GothamMedium, Helvetica, Arial, sans-serif;
+  overflow-x: hidden;
 }
 /* banner */
 #banner {
@@ -22,7 +23,7 @@ body {
 }
 b {
   font-weight: 800;
-  font-size: 13px;
+  font-size: 14px;
 }
 span {
   text-decoration: underline;
@@ -35,6 +36,7 @@ span {
   border: 1px solid gray;
   width: 100%;
   background-color: white;
+  z-index: 10000;
 }
 .sticky {
   position: fixed;
@@ -73,7 +75,7 @@ fieldset {
   padding-left: 10px;
 }
 #search:focus {
-  background-color: white;
+  outline: none;
 }
 /* right part of persistent top bar or icons */
 #navbar_right {
@@ -86,10 +88,68 @@ fieldset {
   height: 72px;
   width: 30%;
   text-align: center;
-  /* position: relative; */
+  position: relative;
 }
 #account:hover {
   cursor: pointer;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 250px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.show {
+  display: block;
+}
+.dropdown-content a {
+  color: black;
+  padding-left: 10px;
+  font-size: 15px;
+}
+#sign_in_button {
+  width: 100px;
+  height: 35px;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  margin-top: 15px;
+  margin-left: 1.5%;
+  font-size: 12px;
+}
+.sub_content {
+  width: 200px;
+  height: 60px;
+  background-color: white;
+  margin: auto;
+  display: flex;
+  margin-top: 15px;
+  justify-content: space-around;
+}
+.sub_content_img {
+  width: 25%;
+  height: 40px;
+  margin: auto 0px;
+}
+.sub_content_img img {
+  width: 100%;
+  height: 100%;
+}
+.sub_content_title {
+  width: 60%;
+  height: 40px;
+  margin: auto 0px;
+}
+.sub_content_title p {
+  margin: 0px;
+  text-align: left;
+  margin-top: 10%;
+  font-weight: bold;
+}
+#card {
+  margin-bottom: 15%;
 }
 #cart {
   height: 72px;
@@ -101,13 +161,6 @@ fieldset {
 }
 .nav_right:hover {
   background-color: #eeeeee;
-}
-#drp_div {
-  /* position: absolute; */
-  width: 200px;
-  height: 200px;
-  border: 1px solid black;
-  /* z-index: 1000; */
 }
 #check_out {
   text-align: center;
@@ -140,6 +193,51 @@ fieldset {
   width: 30%;
   height: 40px;
   justify-content: space-around;
+  position: relative;
+}
+.dept_dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 222px;
+  box-shadow: 0 0 4px rgb(0 0 0 / 35%);
+  z-index: 1;
+  margin-top: 8.5%;
+  margin-left: -3%;
+}
+.dept_dropdown-content div {
+  width: 100%;
+  height: 35px;
+}
+.dept_dropdown-content div:hover {
+  background-color: #eeeeee;
+  cursor: pointer;
+}
+.dept_dropdown-content div p {
+  padding-left: 8%;
+  margin: 0px;
+  font-size: 14px;
+  font-weight: bold;
+  padding-top: 5%;
+}
+.dept_dropdown-content div:nth-last-child(3) {
+  height: 50px;
+}
+.showDept {
+  display: block;
+}
+.store_dropdown_content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 222px;
+  box-shadow: 0px 2px 3px 1px #949494;
+  margin-top: 6%;
+  margin-left: -3%;
+  border-radius: 5px;
+}
+.showStoreDrp {
+  display: block;
 }
 #menu {
   margin-top: 15px;
@@ -299,6 +397,49 @@ fieldset {
   font-size: 13px;
   border: 1px solid black;
 }
+/* scroll to top */
+#scroll {
+  width: 12%;
+  height: 80px;
+  margin: auto;
+  margin-bottom: 40px;
+}
+#scroll button {
+  background-color: white;
+  width: 100%;
+  text-align: center;
+  height: 100%;
+}
+#return-to-top p {
+  font-size: 14px;
+  padding-left: 35px;
+}
+#return-to-top {
+  display: block;
+  text-decoration: none;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+#return-to-top i {
+  color: black;
+  margin: 0;
+  position: relative;
+  left: 16px;
+  top: 13px;
+  font-size: 20px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+#return-to-top:hover i {
+  color: black;
+  top: 6px;
+}
 /* footer */
 footer {
   width: 100%;
@@ -376,17 +517,40 @@ footer {
 #details {
   width: 60%;
   margin: auto;
-  height: 400px;
-  border: 1px solid black;
+  height: 550px;
+  border-bottom: 1px solid gray;
   margin-top: 40px;
   display: flex;
   justify-content: space-around;
 }
 #details div {
   width: 18%;
-  height: 400px;
-  border: 1px solid blue;
+  height: 500px;
   text-align: left;
+}
+#details p {
+  font-size: 13px;
+  font-weight: bold;
+}
+#details li {
+  list-style: none;
+  margin-left: -38px;
+  margin-bottom: 27px;
+  font-size: 13px;
+}
+#details a {
+  color: black;
+  text-decoration: none;
+}
+#details a:hover {
+  text-decoration: underline;
+  color: #4b4545;
+}
+.detail_title {
+  margin-bottom: 32px;
+}
+.off {
+  margin-top: -11px;
 }
 /* footer --info */
 #info {
