--- a/home.css
+++ b/home.css
@@ -333,7 +333,74 @@ fieldset {
 #heart img {
   width: 100%;
 }
-
+/* level of chill section */
+.chill {
+  width: 95%;
+  margin: 5% auto;
+  border: 1px solid black;
+  height: 550px;
+  display: flex;
+  justify-content: space-between;
+}
+#static_chill_div {
+  width: 75%;
+  height: 100%;
+}
+#static_chill_div:hover {
+  cursor: pointer;
+}
+#static_chill_div img {
+  width: 100%;
+  height: 100%;
+}
+.slider_right {
+  width: 26%;
+}
+.parent {
+  width: 100%;
+  height: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.child {
+  display: none;
+  width: 80%;
+  height: 100%;
+}
+.child:hover {
+  cursor: pointer;
+}
+.child img {
+  width: 100%;
+  height: 100%;
+}
+#leftarrow button,
+#rightarrow button {
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 40px;
+  background-color: white;
+  border: 0;
+}
+#dot_div {
+  text-align: center;
+  padding-top: 2%;
+}
+.dot {
+  cursor: pointer;
+  height: 10px;
+  width: 10px;
+  margin: 0 10px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+.active,
+.dot:hover {
+  background-color: black;
+}
 /* category items */
 #category {
   border: 1px solid black;
@@ -589,4 +656,3 @@ footer {
 #info a:hover {
   color: #696969;
 }
-
