--- a/payment.css
+++ b/payment.css
@@ -1,10 +1,18 @@
 body{
     background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
 }
 
 #header-container {
-    display: inline-block;
-    margin-top: 23px;
+    display: flex;
+    align-items: center;
+    height: 70px;
+    position: sticky;
+    top: 0px;
+    background-color: #f5f5f5;
+
+    
 }
 #logo-img {
     width: 150px;
@@ -13,58 +21,45 @@ body{
     padding-left: 30px;
 }
 .header-text{
-    
-        display: inline-block;
-        font-family: 'Gotham 5r',Helvetica,Arial,sans-serif;
-        font-size: 20px;
-        font-weight: 500;
-        font-stretch: normal;
-        font-style: normal;
-        line-height: normal;
-        letter-spacing: -0.71px;
-        color: #444;
+    display: inline-block;
+    font-size: 18px;
+    font-weight: 600;
+    color: #444;
     }
     .return-to-cart{
         background-color: #f5f5f5;
         width: 100%;
         border: 1px solid #ccc;
-        position: fixed;
-        top: 72px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        z-index: 9998; 
-        margin-left: -9px;
+        display: flex;
+        align-items: center; 
+        height: 50px;
+        position: sticky;
+        top: 70px;
     }
     .return-to-cart-arrow{
      
             padding-left: 18px;
-           
             display: flex;
             align-items: center;
-         
-    }
+         }
     a{
         text-decoration: none;
     }
-    .arrow-img{
-        width: 24px;
-    }
     .return-to-cart-text {
-        width: 80%;
-        font-family: 'Gotham 5r',Helvetica,Arial,sans-serif;
-        font-size: 15px;
-        letter-spacing: -0.36px;
-        color: #454545;
-        vertical-align: text-top;
-        padding-left: 5px;
+    width: 80%;
+    font-family: 'Gotham 5r',Helvetica,Arial,sans-serif;
+    font-size: 15px;
+    color: #454545;
+    padding-left: 5px;
     }
  
- .action-pannel{
-    position: absolute;
-    left: 50%;
-    margin-top: 70px;
-    transform: translateX(-50%);
-    z-index: 10;
+    .action_panel{
+        width: 100%;
+    }
+ .action_pannel_inner{
+    margin: auto;
+    position: sticky;
+    top: 120px;
     width: 1024px;
     background-color: #d5edef;
     display: grid;
@@ -74,13 +69,8 @@ body{
  .free-shipping{
     grid-column: 1 / 4;
     grid-row: 1 / 2;
-    text-align: left;
-    line-height: 10px;
     display: flex;
     padding-top: 20px;
-    justify-self: center;
-    margin-right: 800px;
-    width: 224px;
  } 
  .free-shipping-icon-img{
     vertical-align: middle;
@@ -91,20 +81,14 @@ body{
     height: 28px;
     width: 128px;
     font-size: 14px;
-    font-weight: 500;
-    font-style: normal;
-    font-stretch: normal;
     line-height: 1;
-    letter-spacing: normal;
     color: #002f5e;
     padding-left: 20px;
     padding-top: 5px;
  }
  #offer-for-cart{
-     
     grid-column: 2 / 3;
     grid-row: 1 / 2;
-    text-align: center;
     align-self: flex-end;
     cursor: pointer;
     font-family: 'Gotham 5r',Helvetica,Arial,sans-serif;
@@ -112,7 +96,6 @@ body{
     background-color: #14718a;
     color: #FFF;
     height: 56px;
-    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -124,16 +107,15 @@ body{
     margin-left: 760px;
     display: flex;
     flex-direction: column;
-    align-items: center
+    align-items: center;
+    padding-top: 10px;
 }
 .check-bttn{
-    position: relative;
-    left: auto;
-    margin-top: 10px;
-    margin-left: 0;
-    padding-top: 0;
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
+    background: #14718a;
+    color: #fff;
+    width: 224px;
+    border-radius: 8px;
+    height: 40px;
 }
 .bttn{
 padding: 4px;
@@ -148,19 +130,15 @@ border: solid 1px#14718a;
 background-color: #14718a;
 font-family: 'Gotham 4r',Helvetica,Arial,sans-serif;
 font-weight: 500;
-font-style: normal;
-font-stretch: normal;
 line-height: 0.93;
 text-align: center;
 color: #FFF;
 text-decoration: none;
-text-transform: uppercase;
+
 }
 .order-text{
     font-size: 9px;
-    padding: 0;
     margin-top: 5px;
-    font-weight: normal;
     font-family: 'Gotham 4r',Helvetica,Arial,sans-serif;
     color: #000;
     text-align: center;
@@ -178,15 +156,8 @@ text-transform: uppercase;
     box-shadow: 0 16px 24px 0 rgb(23 180 242 / 15%);
 }
 button{
-    
-    font-family: 'Gotham 5r',Helvetica,Arial,sans-serif;
     font-size: 13px;
     font-weight: bold;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    color: #208033;
     background: none;
     border: none;
 }
@@ -198,23 +169,19 @@ button{
 .screen-block{
     display: grid;
     grid-template-columns: 1fr 17px 1fr;
-    grid-template-rows: max-content;
-    margin-top: 190px;
-        margin-left: 245px;
+    width: 1024px;
+    margin: 20px auto 0px auto;
 }
 .left-col-order-summary{
-    width: 470px;
-    height: auto;
+    width: 435px;
     background-color: #fff;
-    margin-bottom: 16px;
     border-radius: 8px;
-    border: solid 1px #eee;
 }
 .recipt-header{
     display: flex;
     padding: 15px 10px;
     height: 13px;
-    width: 450px;
+    width: 420px;
     align-items: center;
     justify-content: space-between;
 }
@@ -242,4 +209,250 @@ button{
     display: inline-block;
     
 }
+.order-summary-head{
+    font-family: 'Gotham 5r',Helvetica,Arial,sans-serif;
+    font-size: 11px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: 0.5px;
+    color: #222;
+    margin-top: 24px;
+    margin-left: 10px;
 
+}
+.right-col-block{
+    grid-row: 1/3;
+    grid-column: 3;
+}
+.contact-block{
+        border-radius: 8px;
+        background-color: #fff;
+        padding: 10.5px;
+}
+#coupon-block{height: 67px;
+        margin-bottom: 16px;
+        border-radius: 8px;
+        background-color: #fff;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        margin-top: 10px;
+}
+.img-container{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.coupon-img{
+    height: 30px;
+  
+}
+.apply-coupon-text{
+    
+    width: 78%;
+    font-family: 'Gotham 7r',Helvetica,Arial,sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    color: #454545;
+    
+}
+#apply-coupon-arrow{
+    height: 25px;
+}
+.message-box{
+    margin-bottom: 16px;
+    border-radius: 8px;
+    background-color: #fff;
+ }
+ .message-text{
+    font-family: 'Gotham 4r',Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.33;
+    color: #454545;
+    padding: 16px;
+ }
+ .shipping-block{
+    width: 550px;
+    border-radius: 8px;
+    border: solid 1px#eee;
+    background-color: #fff;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    margin-bottom: 16px;
+ }
+ .shipping-header{
+    font-family: 'Gotham 5r',Helvetica,Arial,sans-serif;
+    font-size: 17px;
+    font-weight: bold;
+    margin-left: 16px;
+    margin-bottom: 8px;
+}
+.arriving-block{
+margin-left: 12px;
+margin-bottom: 5px;
+}
+.arriving-block-img{
+    width: 24px;
+    height: 24px;
+}
+.arriving-text{
+    font-family: 'Gotham 4r',Helvetica,Arial,sans-serif;
+    font-size: 12px;
+    color: #666;
+}
+
+.address-bar{
+    display: flex;
+}
+
+#search{
+    width: 440px;
+    height: 45px;
+    margin-left: 22px;
+    border:#c1c1c1 solid 1px;
+    margin-top: 12px;
+    display: flex;
+    border-radius: 5px;
+}
+.search-icon-img3{
+   width: 24px;
+   padding: 10px;
+  
+}
+#search-bar{
+   
+       width: 624px;
+       height: 28px;
+       margin-top: 6px;
+       border: none;
+       font-size: larger;
+       outline: none;
+       background-color: #ffffff;
+}
+.cancel-input{
+    font-family: 'Gotham 5r',Helvetica,Arial,sans-serif;
+    font-size: 15px;
+    font-weight: 700;
+   color: #208033;
+    margin-left: 18px;
+    margin-top: 20px;
+    text-decoration: none;
+}
+.enter-address-text{
+    font-family: 'Gotham 5r',Helvetica,Arial,sans-serif;
+    font-size: 13px;
+    font-weight: 700;
+    color: #208033;
+    margin-top: 16px;
+    text-align: center;
+}
+.military-address{
+    border-top: 0.5px solid #eee;
+    font-family: 'Gotham 5r',Helvetica,Arial,sans-serif;
+    font-size: 13px;
+    padding-top: 15px;
+    padding-bottom: 10px;
+    font-weight: 700;
+    color: #208033;
+    margin-top: 16px;
+    text-decoration: none;
+    margin-left: 12px;
+}
+.gift-card-block{
+    width: 550px;
+        border-radius: 8px;
+        border: solid 1px#eee;
+        background-color: #fff;
+        padding-top: 16px;
+        margin-bottom: 16px;
+        padding-bottom: 16px;
+        z-index: 0;
+}
+.gift-card-img{
+        width: 32px;
+        vertical-align: middle;
+        margin-right: 14px;
+        margin-left: 10px;
+    
+}
+.gift-card-text{
+    font-family: 'Gotham 5r',Helvetica,Arial,sans-serif;
+    font-size: 15px;
+    font-weight: 700;
+   color: #208033;
+    
+
+    text-decoration: none;
+}
+.payment-block{
+    width: 550px;
+    border-radius: 8px;
+    border: solid 1px#eee;
+    background-color: #fff;
+    padding-top: 16px;
+    margin-bottom: 16px;
+    padding-bottom: 16px;
+}
+.payment-header-text{
+    font-family: 'Gotham 5r',Helvetica,Arial,sans-serif;
+    font-size: 17px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.47;
+    letter-spacing: normal;
+    color: #444;
+    padding-left: 16px;
+    margin-bottom: 20px;
+}
+.payment-card-options{
+    padding-left: 12px;
+}
+.credit-debit-card-text{
+    font-family: 'Gotham 4r',Helvetica,Arial,sans-serif;
+    font-size: 15px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.67;
+    letter-spacing: normal;
+    color: #222;
+    width: 492px;
+    cursor: pointer;
+}
+.kohls-card-img{
+    width: 42px;
+    vertical-align: middle;
+}
+.kohls-card-text{
+    vertical-align: middle;
+    cursor: pointer;
+}
+.credit-card-img{
+    width: 33px;
+    vertical-align: top;
+    margin-left: 4px;
+    margin-right: 4px;
+}
+   .shipping-block2{
+    width: 550px;
+        border-radius: 8px;
+        border: solid 1px #eee;
+        background-color: #fff;
+        padding-top: 16px;
+        padding-bottom: 16px;
+        margin-bottom: 16px;
+   } 
+  .shipping-header2{
+    font-family: 'Gotham 5r',Helvetica,Arial,sans-serif;
+    font-size: 17px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.47;
+    letter-spacing: normal;
+    color: #444;
+    margin-left: 16px;
+    margin-bottom: 8px;
+  }
