--- a/additem.css
+++ b/additem.css
@@ -48,10 +48,11 @@ body{
     border:  #c1c1c1 solid 1px;
     width: 100%;
     height: 45px;
-    margin-top: 10px;
+    margin-top: 7px;
     display: flex;
     position: sticky;
     top: 71px;
+    margin-left: -9px;
     background-color:white ;
    
 }
@@ -73,7 +74,7 @@ body{
        display: grid;
        grid-template-columns: 1fr 320px 1fr;
        grid-template-rows: 80px auto 24px;
-       margin-top: 30px;
+       margin:auto;
       position: sticky;
       top: 118px;
       left: 16%;
@@ -138,14 +139,12 @@ body{
         font-family: 'Gotham 4r',Helvetica,Arial,sans-serif;
         font-size: 15px;
         font-weight: 500;
-        font-style: normal;
-        font-stretch: normal;
         line-height: 0.93;
         text-align: center;
         color: #fff;
         text-decoration: none;
         padding: 13px;
-        text-transform: uppercase;
+       
 }
 a{
    margin: 0;
@@ -315,7 +314,7 @@ padding-right: 16px;
     background-color: #fff;
     padding: 15px 15px 10px 15px;
     margin-bottom: 16px;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-left: 10px;
 }
 .banner{
