--- a/ss3.css
+++ b/ss3.css
@@ -22,27 +22,40 @@ p{
     font-family: monospace;
     text-decoration: none;
 }
-.img1{
- text-decoration: none;
- }
-.img-1{
-    width: 344px;
+.text{
+  text-decoration: none;
 }
-.img2{
-    text-decoration: none;
-    }
-    .img-2{
-        width: 340px;
-    }
-   .img3{
-    text-decoration: none;
-   }
-   .img-3{
-    width: 343px;
+
+.image{
+    position: relative;
+    width: 345px;
+
 }
-   .img4{
-    text-decoration: none;
-   }
-   .img-4{
-    width: 340px;
+.image--img{
+    display: block;
+    width: 100%;
+
 }
+
+.image--overlay{
+ position: absolute;
+ top: 0;
+ left: 0;
+ width: 100%;
+ height: 100%;
+ background: rgba(0,0,0,0.2);
+ color:black;
+ font-family: sans-serif;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+ justify-content: center;
+ opacity: 0;
+ font-family: cursive;
+ font-size: 33px;
+}
+.image--overlay:hover{
+opacity: 1;
+}
+
+
