--- a/mens_clothing.css
+++ b/mens_clothing.css
@@ -379,7 +379,7 @@ section {
 }
 .holiday a {
   /* background: url(https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-header-hero-m?scl=1&fmt=pjpeg); */
-  background: url(maiming.png);
+  background: url(./men.images/maiming.png);
   display: block;
   /* width: 100%; */
   /* background-size: cover; */
@@ -473,7 +473,7 @@ a {
 }
 .pt:hover {
   text-decoration: underline;
-  background-color: rgba(255, 255, 255) ;
+  background-color: rgba(255, 255, 255);
 }
 #acont {
   text-align: center;
@@ -579,7 +579,7 @@ a {
 }
 .holiday1 a {
   /* background: url(https://media.kohlsimg.com/is/image/kohls/Mens-dp-20211018-header-hero-m?scl=1&fmt=pjpeg); */
-  background: url(festive.png);
+  background: url(./men.images/festive.png);
   display: block;
   width: 100%;
   /* border: 1px solid blue; */
