--- a/description.css
+++ b/description.css
@@ -680,6 +680,9 @@ img:hover {
   margin-top: 50px;
   background-color: #14718a;
 }
+#addToCartBtn:hover {
+  cursor: pointer;
+}
 #addToCartBtn i {
   color: white;
   margin-top: 20px;
