--- a/css/description.css
+++ b/css/description.css
@@ -832,7 +832,7 @@ img:hover {
   margin: auto;
   height: 438px;
   /* border: 1px solid red; */
-  background: url(../ns6.png);
+  background: url(../images/desc_images/ns6.png);
   background-size: contain;
 }
 
@@ -905,7 +905,7 @@ p {
   margin-left: 20px;
   margin-top: 40px;
   /* border:  1px solid rgb(20, 19, 19); */
-  background: url(../ns7.png);
+  background: url(../images/desc_images/ns7.png);
   background-size: contain;
 }
 #nimg001 {
@@ -914,7 +914,7 @@ p {
   margin-left: 20px;
   /* margin-top: 40px; */
   /* border:  1px solid rgb(20, 19, 19); */
-  background: url(../ns8.png);
+  background: url(../images/desc_images/ns8.png);
   background-size: contain;
 }
 #nimg0012 {
@@ -923,7 +923,7 @@ p {
   margin-left: 20px;
   /* margin-top: 40px; */
   /* border:  1px solid rgb(20, 19, 19); */
-  background: url(../ns9.png);
+  background: url(../images/desc_images/ns9.png);
   background-size: contain;
 }
 #nbtn {
